force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/NVIDIASFDCOrgInstanceInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This contains SFDC Instance Information (IsSandbox, Sandbox name, Sandbox Id). This will be auto set during Sandbox Refresh or by running NVIDIASFDCOrgInstanceInitializer class method</description>
    <label>NVIDIASFDCOrgInstanceInfo</label>
</CustomObject>