force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this instance a Sandbox?</description>
    <label>IsSandbox</label>
    <type>Checkbox</type>
</CustomField>