force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <description>Sandbox Org Id : 00D</description>
    <label>OrgId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>