force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/fields/RefreshDateTime__c.field-meta.xml
<CustomField>
    <fullName>RefreshDateTime__c</fullName>
    <label>RefreshDateTime</label>
    <type>DateTime</type>
</CustomField>