force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/fields/SandboxId__c.field-meta.xml
<CustomField>
    <fullName>SandboxId__c</fullName>
    <description>Sandbox Id : 07E</description>
    <label>SandboxId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>