force-app/main/default/objects/NVIDIASFDCOrgInstanceInfo__c/fields/SandboxName__c.field-meta.xml
<CustomField>
    <fullName>SandboxName__c</fullName>
    <description>Name of the sandbox</description>
    <label>SandboxName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>